fix images at homepage on mobile

--- a/src/components/sections/TopBlock/style.module.scss
+++ b/src/components/sections/TopBlock/style.module.scss
@@ -183,22 +183,3 @@
   }
 }
 
-
-.topBlockImages {
-  position: relative;
-  margin-top: 28px;
-  margin-left: 57px;
-}
-
-.morphCardDesktop {
-  position: absolute;
-  top: 131px;
-  right: -92px;
-  width: 294px;
-  height: 555px;
-}
-
-.morphDesktop {
-  width: 453px;
-  height: 735px;
-}
